about page update

--- a/html/about/index.html
+++ b/html/about/index.html
@@ -78,9 +78,7 @@
 
 
 
-  <!-- <link href="https://cdn.jsdelivr.net/npm/the-new-css-reset@1.11.2/css/reset.min.css" rel="stylesheet"> -->
 
-  <!-- CSS Reset -->
   <link rel="stylesheet" href="/main.css">
   <script type="text/javascript" src="/scripts.js"></script>
 
@@ -253,7 +251,7 @@
           <div class="widthMax">
             <div class="element">
               <strong>
-                <div class="intro aos-init aos-animate" data-aos="fade-up">           
+                <div class="intro aos-init aos-animate" data-aos="fade-up">
                   <h1>I'm interested in streamlining workflows, improving business efficiency, and increasing consumer engagement. </h1>
                 </div>
               </strong>
@@ -281,7 +279,7 @@
     <div class="Grid Grid--full Grid--gutters u-textCenter">
       <div class="Grid-cell">
         <div class="element">
-          <img class="widthS" src="/about/me.jpg" alt="icon arrow">
+          <img class="widthS" src="/about/me.png" alt="icon arrow">
 
         </div>
       </div>
@@ -305,7 +303,7 @@
             <div class="Grid-cell">
                 <div class="element">
                     <h2 class="tArrow">
-                        Method &amp; Importance <img class="seArrow" src="/icon/arrow-se.svg" alt="icon arrow">
+                        Design Process <img class="seArrow" src="/icon/arrow-se.svg" alt="icon arrow">
                     </h2>
                 </div>
             </div>
@@ -316,63 +314,51 @@
 
   <!--Arrow subtitle-->
 
-  
+
   <div class="blankHXS"></div>
   <div class="wrapper">
-    <div class="Grid Grid--gutters Grid--cols-2">
+    <div class="Grid Grid--gutters Grid--cols-3">
 
-      <div class="Grid-cell" data-aos="flip-up">
+      <div class="Grid-cell   cardBorderThick borderRadiusM  paddingNone marginXS">
         <div class="element">
-          <div class="elementInner cardBorder borderRadiusS shadowBoxLt">
-            <img class="iconM" src="IconSearch.svg" alt="se-arrow">
-            <h3 data-aos="fade-up"> <strong> Business &#38; Product Insight</strong>
+            <h2 data-aos="fade-up"> <strong> Understanding Users and Products</strong> </h2>
+            <h3>I aim to deeply comprehend business objectives and product specifics, while keeping user goals and pain points at the forefront. Based on this understanding, I conceive and plan immersive user experiences.
+
             </h3>
-            <p>Deeply understand business objectives and product specifics, while focusing on user goals and pain
-              points.</p>
 
-          </div>
         </div>
       </div>
-      <div class="Grid-cell" data-aos="flip-up">
+      <div class="Grid-cell   cardBorderThick borderRadiusM  paddingNone marginXS">
         <div class="element">
-          <div class="elementInner cardBorder borderRadiusS shadowBoxLt">
-            <img class="iconM" src="IconCategory.svg" alt="se-arrow">
-            <h3 data-aos="fade-up"> <strong> Roadmap Contribution &#38; Team Alignment </strong> </h3>
-            <p>Actively contribute to the product roadmap and align goals with cross-functional teams.</p>
+            <h2 data-aos="fade-up"> <strong> Building Strong Cross-Functional Partnerships            </strong> </h2>
+            <h3>I turn ambiguous projects into articulated plans, ensuring cross-functional alignment along the way. By collaborating with different teams, I enhance the value and validity of research.</h3>
+
           </div>
+      </div>
+      <div class="Grid-cell   cardBorderThick borderRadiusM  paddingNone marginXS">
+        <div class="element">
+
+
+            <h2 data-aos="fade-up"> <strong> Managing the Design Process            </strong> </h2>
+
+            <h3>I oversee each phase of the design process, from planning research to delivering high-quality designs that simultaneously solve user problems, meet their needs, and achieve business goals. My focus is on maintaining a feedback loop to continuously improve the design, and I ensure that each phase has a clear deadline to keep the project on track.
+            </h3>
+
         </div>
       </div>
-
     </div>
-    <div class="Grid Grid--gutters Grid--cols-2">
-      <div class="Grid-cell" data-aos="flip-up">
+
+
+  </div>
+  <div class="wrapper">
+    <div class="Grid Grid--full forFullResponsiveGrid">
+      <div class="Grid-cell">
         <div class="element">
-          <div class="elementInner cardBorder borderRadiusS shadowBoxLt">
-            <img class="iconM" src="iconBrush.svg" alt="se-arrow">
-
-
-            <h3 data-aos="fade-up"> <strong> Design Sprint Management</strong> </h3>
-
-            <P>Plan and execute design sprints, setting clear deadlines for phases like discovery, definition, design,
-              and testing.</P>
-
-          </div>
+          <a href="/resume" class="textUnderline">
+            <h3>Visit my resume page</h3>
+          </a>
         </div>
       </div>
-      <div class="Grid-cell" data-aos="flip-up">
-        <div class="element">
-          <div class="elementInner cardBorder borderRadiusS shadowBoxLt">
-            <img class="iconM" src="IconDocument.svg" alt="se-arrow">
-
-
-            <h3 data-aos="fade-up"> <strong> Solution-Oriented Design</strong> </h3>
-
-            <P>Grasp product scope and stakeholder needs, integrating new designs into existing systems with a focus on
-              simplicity and problem-solving.</P>
-          </div>
-        </div>
-      </div>
-
     </div>
   </div>
   <!-- My Journey -->
@@ -398,7 +384,9 @@
 
   <!--Arrow subtitle-->
 
+
   <div class="wrapper">
+
     <div class="Grid Grid--full Grid--gutters">
       <div class="Grid-cell">
         <div class="element">
@@ -407,49 +395,33 @@
             <div class="progressStepContainer">
               <ul class="progressX">
                 <li class="progress__item" data-aos="fade-up">
-                  <h3> <strong class="Grey700">Art </strong> </h3>
-                  <p>Art is the process of channeling emotions and ideas into creative expression. It allows us to
-                    visually represent complex concepts and emotions that are hard to articulate. Engaging with art
-                    enhances our understanding of the design process and opens up new perspectives. It lays the
-                    groundwork for creating distinctive designs through the use of color, composition, and other
-                    elements.
-                  </p>
+                  <h3> <strong class="Grey700">Art - Drawing & Painting</strong> </h3>
+                  <h3>Art is my way of turning emotions and ideas into visual expression. It deepens my understanding of design and opens up new perspectives. Through color, composition, and other elements, art helps me create unique designs.
+                  </h3>
 
                 </li>
                 <div class="blankHXS"></div>
 
                 <li class="progress__item" data-aos="fade-up">
-                  <h3> <strong class="Grey700">Design </strong> </h3>
-                  <p>In design, the core is a powerful creative vision that incorporates creativity, innovation,
-                    meticulousness, and the capacity to think innovatively.
-                  </p>
+                  <h3> <strong class="Grey700">Design - Visual & Landscape & Architecture</strong> </h3>
+                  <h3>In design, my heart lies in a vibrant creative vision that marries creativity, innovation, and precision with out-of-the-box thinking.
+                    In architecture, I focus on creating functional and visually appealing buildings that meet client' needs, balance different elements, and achieve a harmonious aesthetic.
+                  </h3>
 
                 </li>
                 <div class="blankHXS"></div>
 
-                <li class="progress__item" data-aos="fade-up">
-                  <h3> <strong class="Grey700">Architecture </strong> </h3>
-                  <p>Architecture involves crafting buildings that are functional and visually appealing, considering
-                    the
-                    users' needs, the interplay of various components, and the overall aesthetic. Success in
-                    architecture
-                    also means communicating effectively with clients and colleagues, and being organized and efficient.
 
-                  </p>
-                </li>
-                <div class="blankHXS"></div>
 
                 <li class="progress__item progress__item--active" data-aos="fade-up">
-                  <h3> <strong>User experience design </strong> </h3>
-                  <p>User experience design is about comprehending the user's desires and behaviors to create products
-                    that are intuitive and fulfilling. It combines an attractive design with a user-friendly interface,
-                    grounded in an understanding of human psychology and current technology trends.
+                  <h3> <strong>User Experience Design </strong> </h3>
+                  <h3>I love UX because it empowers users in the design process. My goal is always to solve problems through feedback and data analysis. The short design and development cycle in UX turns all my design dreams into reality.
 
 
 
 
 
-                  </p>
+                  </h3>
               </ul>
             </div>
           </div>
@@ -459,208 +431,8 @@
     </div>
   </div>
 
-    <!--Arrow subtitle-->
-    
 
-
-    <div class="blankHS"></div>
-    <div class="wrapper">
-        <div class="Grid Grid--full Grid--gutters u-textCenter">
-            <div class="Grid-cell">
-                <div class="element">
-                    <h2 class="tArrow">
-                        About Me <img class="seArrow" src="/icon/arrow-se.svg" alt="icon arrow">
-                    </h2>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="blankHXS"></div>
-    
-
-    <!--Arrow subtitle-->
   <!-- My Journey -->
-  <div class="wrapper">
-    <div class="Grid Grid--full forFullResponsiveGrid">
-      <div class="Grid-cell">
-        <div class="element">
-
-          <a href="/resume.pdf" class="textUnderline" target="”_blank”">
-            <h3>Download My Resume</h3>
-          </a>
-        </div>
-      </div>
-    </div>
-    <div class="Grid Grid--gutters Grid--cols-3">
-      <div class="Grid-cell">
-        <div class="element ">
-          <h3 class="">EDUCATION </h3>
-          <div class="lineHorizS"></div>
-        </div>
-
-        <div class="element">
-          <h4 data-aos="fade-up" class="aos-init aos-animate"> <strong>UC Berkeley </strong> </h4>
-          <h6 class="textItalic"> August 2015 - May 2019</h6>
-          <h5>Master of Architecture </h5>
-          <h5> Building Science &amp; Technology </h5>
-        </div>
-        <div class="element">
-          <h4 data-aos="fade-up" class="aos-init aos-animate"> <strong>Beijing University of Technology </strong> </h4>
-          <h6 class="textItalic"> September 2009 - July 2013</h6>
-          <h5>Bachelor of Art </h5>
-          <h5> Art &amp; Design &amp; Landscape Design </h5>
-        </div>
-
-        <div class="element">
-          <h4 data-aos="fade-up" class="aos-init aos-animate"> <strong>Codecademy </strong> </h4>
-          <h6 class="textItalic"> March - May 2023</h6>
-          <h5>Learn User Research: Generative</h5>
-          <h5>Learn Design Thinking: Ideation</h5>
-          <h5>Learn Interaction Design</h5>
-          <h5>Introduction to UI and UX Design </h5>
-
-          <h5>Learn Responsive Design</h5>
-          <h5>Learn Navigation Design</h5>
-          <h5>Learn JavaScript</h5>
-
-          <br>
-          <h6 class="textItalic"> March 2023 - Present</h6>
-
-          <h5>Front-End Engineer </h5>
-
-
-        </div>
-
-        <div class="element">
-          <h4 data-aos="fade-up" class="aos-init aos-animate"> <strong>Google UX Design Professional Certificate </strong> </h4>
-          <h6 class="textItalic"> August 2021 - October 2021</h6>
-          <h5>Google | Coursera</h5>
-          <h5>UI / UX Design </h5>
-        </div>
-      </div>
-
-
-      <div class="Grid-cell">
-        <div class="element ">
-          <h3>EXPERIENCE</h3>
-          <div class="lineHorizS"></div>
-        </div>
-        <div class="element ">
-          <h4 data-aos="fade-up" class="aos-init aos-animate"> <strong> BookYourPet </strong> </h4>
-          <h6 class="textItalic"> Oct. 2021 - Present</h6>
-          <h5>Calabasas, CA </h5>
-          <h5>UI/UX designer</h5>
-        </div>
-        <div class="element ">
-          <h4 data-aos="fade-up" class="aos-init aos-animate"> <strong> LASO Health </strong> </h4>
-          <h6 class="textItalic"> Sep. 2023 - Jan. 2024</h6>
-          <h5>San Antonio, Texas. </h5>
-          <h5>Product designer</h5>
-        </div>
-        <div class="element ">
-          <h4 data-aos="fade-up" class="aos-init aos-animate"> <strong>VW Studio</strong> </h4>
-          <h6 class="textItalic"> October 2021 - Present</h6>
-          <h5>Berkeley, CA </h5>
-          <h5>Product designer - Freelancer</h5>
-        </div>
-
-        <div class="element ">
-          <h4 data-aos="fade-up" class="aos-init aos-animate"> <strong>Buro Ole Scheeren </strong> </h4>
-          <h6 class="textItalic"> August 2017 — July 2018 </h6>
-          <h5>Beijing, China </h5>
-          <h5>Architectural Designer </h5>
-        </div>
-        <div class="element ">
-          <h4 data-aos="fade-up" class="aos-init aos-animate"> <strong>In Design Studio </strong> </h4>
-          <h6 class="textItalic">May 2017 - August 2017 </h6>
-          <h5>New York, U.S. </h5>
-          <h5>Summer Intern </h5>
-        </div>
-        <div class="element ">
-          <h4 data-aos="fade-up" class="aos-init aos-animate"> <strong>PDI Design Group </strong> </h4>
-          <h6 class="textItalic"> December 2013 - July 2015 </h6>
-          <h5>Beijing, China </h5>
-          <h5>Architectural Designer </h5>
-        </div>
-        <div class="element ">
-          <h4 data-aos="fade-up" class="aos-init aos-animate"> <strong>Do Union</strong> </h4>
-          <h6 class="textItalic">July 2010 - May 2012 </h6>
-          <h5>Beijing, China </h5>
-          <h5>Architectural Intern </h5>
-        </div>
-
-      </div>
-
-
-
-      <div class="Grid-cell">
-        <div class="element ">
-          <h3>SKILL&amp;TOOLS
-          </h3>
-          <div class="lineHorizS"></div>
-        </div>
-        <div class="element">
-          <h4 data-aos="fade-up" class="aos-init aos-animate"> <strong>Design Skills</strong> </h4>
-          <h5>User-Centered Design (UCD)</h5>
-          <h5>Wireframing &amp; Prototyping</h5>
-          <h5>User Research</h5>
-          <h5>Information Architecture</h5>
-          <h5>Usability Testing</h5>
-          <h5>Interaction Design</h5>
-          <h5>Responsive and Adaptive Design</h5>
-          <h5>Visual Design</h5>
-          <h5>Analytical Skills</h5>
-          <h5>Project Management</h5>
-          <h5>Business Acumen</h5>
-
-        </div>
-        <div class="element">
-          <h4 data-aos="fade-up" class="aos-init aos-animate"> <strong> Design Research </strong> </h4>
-          <h5>User Interviews </h5>
-          <h5>Surveys &amp; Questionnaires</h5>
-
-          <h5>Usability Testing</h5>
-          <h5>User Personas</h5>
-          <h5>Journey Mapping</h5>
-          <h5>Heuristic Evaluation</h5>
-          <h5>Data Analysis</h5>
-        </div>
-        <div class="element">
-          <h4 data-aos="fade-up" class="aos-init aos-animate"> <strong>Design Tools</strong> </h4>
-          <h5> Figma, Adobe XD, Sketch </h5>
-
-          <h5> Adobe Suite (Illustrator, Photoshop, InDesign) AutoCAD </h5>
-        </div>
-
-        <div class="element">
-          <h4 data-aos="fade-up" class="aos-init aos-animate"> <strong> Technical Skills</strong> </h4>
-          <h5> HTML, CSS,</h5>
-          <h5> JavaScript, EJS(Embedded JavaScript templates), jQuery </h5>
-
-        </div>
-
-
-
-        <div class="element">
-          <h4 data-aos="fade-up" class="aos-init aos-animate"> <strong>3D Design Tools </strong> </h4>
-          <h5> 3Dmax Studio, Rhino, SketchUp </h5>
-          <h5> Grasshopper, Ladybug, DIVA </h5>
-          <h5> Unity </h5>
-        </div>
-
-        <div class="element">
-          <h4 data-aos="fade-up" class="aos-init aos-animate"> <strong>Fabrication</strong> </h4>
-          <h5> 3D Printing </h5>
-          <h5> 3D Scanner (NextEngine 3D) </h5>
-          <h5> CNC (Techno Isel 3-axis CNC router) </h5>
-          <h5> Laser Cutter, Blade Cutter (Zund S3 Digital) </h5>
-        </div>
-
-
-
-      </div>
-    </div>
-  </div>
 
 
   <!-- Shared across the platform -->
