about - content update

--- a/html/about/index.html
+++ b/html/about/index.html
@@ -319,30 +319,35 @@
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-3">
 
-      <div class="Grid-cell   cardBorderThick borderRadiusM  paddingNone marginXS">
+      <div class="Grid-cell  cardBorderThick borderRadiusM  paddingNone marginXS">
         <div class="element">
+          <div class="element">
+
             <h2 data-aos="fade-up"> <strong> Understanding Users and Products</strong> </h2>
-            <h3>I aim to deeply comprehend business objectives and product specifics, while keeping user goals and pain points at the forefront. Based on this understanding, I conceive and plan immersive user experiences.
-
+            <h3>In my view, a deep understanding of both business goals and user needs is fundamental to UX design. By prioritizing these aspects, I'm able to create immersive user experiences that truly resonate. This dual focus is crucial in ensuring that my design projects have a meaningful impact. It also aids in the planning and prioritization process, ensuring that we focus on what matters most.
             </h3>
-
+          </div>
         </div>
       </div>
       <div class="Grid-cell   cardBorderThick borderRadiusM  paddingNone marginXS">
         <div class="element">
-            <h2 data-aos="fade-up"> <strong> Building Strong Cross-Functional Partnerships            </strong> </h2>
-            <h3>I turn ambiguous projects into articulated plans, ensuring cross-functional alignment along the way. By collaborating with different teams, I enhance the value and validity of research.</h3>
+          <div class="element">
+            <h2 data-aos="fade-up"> <strong> Building Strong Cross-Functional Partnerships </strong> </h2>
+            <h3>I transform ambiguous projects into articulated plans, ensuring cross-functional alignment throughout the process. By setting early deadlines and establishing feedback loops for each milestone, I encourage timely feedback and iterative improvement. Collaborating closely with various teams, I enhance both the value and validity of research, leading to more informed and impactful design decisions.
 
+            </h3>
           </div>
+        </div>
       </div>
       <div class="Grid-cell   cardBorderThick borderRadiusM  paddingNone marginXS">
         <div class="element">
+          <div class="element">
+            <h2 data-aos="fade-up"> <strong> Managing the Design Process </strong> </h2>
+            <h3>Throughout each phase of the design process, from planning research to iterating designs and delivering high-quality final products, my focus is on maintaining a feedback loop to continuously refine and improve the design. I ensure that each phase has a clear deadline to keep the project on track. By documenting each iteration and evaluating the strengths and weaknesses of each iteration, I aim to build a more effective and impactful design.
 
 
-            <h2 data-aos="fade-up"> <strong> Managing the Design Process            </strong> </h2>
-
-            <h3>I oversee each phase of the design process, from planning research to delivering high-quality designs that simultaneously solve user problems, meet their needs, and achieve business goals. My focus is on maintaining a feedback loop to continuously improve the design, and I ensure that each phase has a clear deadline to keep the project on track.
             </h3>
+          </div>
 
         </div>
       </div>
