--- a/html/index.html
+++ b/html/index.html
@@ -244,7 +244,6 @@
 <div class="wrapper">
   <div class="Grid Grid--gutters">
     <div class="Grid-cell">
-
       <div class="row">
         <div class="widthMax">
           <div class="element">
@@ -255,7 +254,6 @@
             </strong>
           </div>
         </div>
-        
         <div class="paddingleft">
           <div class="element">
             <div class="widthFitContent">
@@ -348,7 +346,7 @@
     <a class="no-hover-effect">
       <div class="">
         <div class="img__wrap">
-          <img class="img__img" alt="Pet B2B Booking App Revamp: The Transition from White-Glove to Self-Service" src="/projectImages/Cover_BYP_AppB2B_Redesign.png" />
+          <img class="img__img" alt="B2B SaaS Booking App Revamp: The Transition from White-Glove to Self-Service" src="/projectImages/Cover_BYP_AppB2B_Redesign.png" />
           <div class="img__description">
             <div class="input-field">
               <div class="column">
@@ -359,7 +357,7 @@
                 <div class="pwContainer">
                   <input class="PWinput psJS" type="password" id="b2bAppRedesign" placeholder="Enter password">
                   <button class="passwordArr" type="submit">
-                    <img src="/icon/arrow-forward.svg" width="908" height="504" alt="Pet B2B Booking App Revamp: The Transition from White-Glove to Self-Service">
+                    <img src="/icon/arrow-forward.svg" width="908" height="504" alt="B2B SaaS Booking App Revamp: The Transition from White-Glove to Self-Service">
                   </button>
                 </div>
                 <div class="pwIncorrectHeight">
@@ -371,7 +369,7 @@
           <div class="element">
             <div class="element">
               <h5>Password is required</h5>
-              <h3 class="arrCard"><strong>Pet B2B Booking App Revamp: The Transition from White-Glove to Self-Service
+              <h3 class="arrCard"><strong>B2B SaaS Booking App Revamp: The Transition from White-Glove to Self-Service
                 </strong></h3>
               <h4>Discover how we transformed the BookYourPet app with a strategic redesign, shifting from a white-glove service to a user-friendly self-service platform. This overhaul focused on enhancing key features, resulting in a significant 45% increase in user satisfaction and a more streamlined experience for pet owners. Join us on our journey to revolutionize pet care services with a seamless and intuitive booking experience.
       
@@ -504,7 +502,7 @@
     <a class="no-hover-effect">
       <div class="">
         <div class="img__wrap">
-          <img class="img__img" alt="RX Zero Savings Explorer - Cost-benefit Calculator" src="/projectImages/Cover_LASO_CostCalculator.png" />
+          <img class="img__img" alt="RX Zero Savings Explorer: Uncover Prescription Meds Savings" src="/projectImages/Cover_LASO_CostCalculator.png" />
           <div class="img__description">
             <div class="input-field">
               <div class="column">
@@ -515,7 +513,7 @@
                 <div class="pwContainer">
                   <input class="PWinputLH psJS" type="password" id="costCalculator" placeholder="Enter password">
                   <button class="passwordArr" type="submit">
-                    <img src="/icon/arrow-forward.svg" width="908" height="504" alt="RX Zero Savings Explorer - Cost-benefit Calculator">
+                    <img src="/icon/arrow-forward.svg" width="908" height="504" alt="RX Zero Savings Explorer: Uncover Prescription Meds Savings">
                   </button>
                 </div>
                 <div class="pwIncorrectHeight">
@@ -527,7 +525,7 @@
           <div class="element">
             <div class="element">
               <h5>Password is required</h5>
-              <h3 class="arrCard"><strong>RX Zero Savings Explorer - Cost-benefit Calculator
+              <h3 class="arrCard"><strong>RX Zero Savings Explorer: Uncover Prescription Meds Savings
                 </strong></h3>
               <h4>This tool enables users to compare their current medication costs with the RX Zero subscription model, offering a seamless experience that simplifies making healthcare financial decisions.
               </h4>
