--- a/html/architecture/index.html
+++ b/html/architecture/index.html
@@ -295,6 +295,24 @@
     </div>
 </div>
 
+  <div class="wrapper">
+    <div class="row">
+      <div class="element">
+        <a href="mailto:vickyw.design@gmail.com"> <button class="buttonLanding">Email me
+          </button></a>
+      </div>
+      <div class="element">
+        <div class="ClipboardBoxIconOnly">
+          <button class="ClipboardIconOnly">
+            <img class="iconM hoverGrey100 paddingMax borderRadiusMax" title="Copy Email Address to Clipboard" src="/icon/copy.svg">
+            <p class="clickIconCopy">vickyw.design@gmail.com
+            </p>
+          </button>
+        </div>
+      </div>
+
+    </div>
+  </div>
   <div class="blankHS"></div>
 
   <!-- Arrow -->
