--- a/html/index.html
+++ b/html/index.html
@@ -10,11 +10,11 @@
   <link rel="canonical" href="https://vickywang.me/">
 
   <title>
-    Innovative UX Designer Specializing in B2B SaaS &amp; Mobile Workflow Efficiency - Vicky Wang
+    Creative UX Designer Focused on Streamlining Workflows - Vicky Wang
   </title>
-  <meta name="title" content="Innovative UX Designer Specializing in B2B SaaS &amp; Mobile Workflow Efficiency - Vicky Wang">
+  <meta name="title" content="Creative UX Designer Focused on Streamlining Workflows - Vicky Wang">
   <meta name="author" content="Vicky W.">
-  <meta name="description" content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
+  <meta name="description" content="Specializing in crafting seamless user experiences for B2B SaaS and consumer applications, Vicky Wang transforms complexity into user-friendly solutions.">
 
 
   
@@ -22,8 +22,8 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Innovative UX Designer Specializing in B2B SaaS &amp; Mobile Workflow Efficiency - Vicky Wang">
-  <meta property="og:" content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
+  <meta property="og:title" content="Creative UX Designer Focused on Streamlining Workflows - Vicky Wang">
+  <meta property="og:" content="Specializing in crafting seamless user experiences for B2B SaaS and consumer applications, Vicky Wang transforms complexity into user-friendly solutions.">
   <meta property="og:url" content="https://vickywang.me/">
   <meta property="og:site_name" content="Vicky's Website">
   <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
@@ -31,8 +31,8 @@
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://vickywang.me/">
-  <meta property="twitter:title" content="Innovative UX Designer Specializing in B2B SaaS &amp; Mobile Workflow Efficiency - Vicky Wang">
-  <meta property="twitter:description" content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
+  <meta property="twitter:title" content="Creative UX Designer Focused on Streamlining Workflows - Vicky Wang">
+  <meta property="twitter:description" content="Specializing in crafting seamless user experiences for B2B SaaS and consumer applications, Vicky Wang transforms complexity into user-friendly solutions.">
   <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
 
   <!-- favicon -->
