--- a/html/about/index.html
+++ b/html/about/index.html
@@ -436,6 +436,11 @@
 <div class="Grid Grid--full Grid--gutters u-textCenter">
     <ul class="tags" id="TagsCloud">
 
+
+      <li class="tag"><span class="box"> Creative designer, Strategic thinker </span></li>
+
+
+
       <li class="tag"><span class="box"> B2B SaaS Product Designer</span></li>
       <li class="tag"><span class="box"> SaaS UX Design Expert</span></li>
       <li class="tag"><span class="box"> Mobile App Design Specialist</span></li>
@@ -476,7 +481,7 @@
 
     </ul>
   </div>
-  <div class="blankHL"></div>
+  <div class="blankHM"></div>
 
   
 
