--- a/html/about/index.html
+++ b/html/about/index.html
@@ -406,7 +406,16 @@
         </div>
       </div>
     </div>
+    <div class="blankHXS"></div>
 
+    <div class="carouselLogoBlurContainer">
+
+      <div class="carouselLogoBlur">
+        <div class="logos"></div>
+      </div>
+  
+    </div>
+    <div class="blankHS"></div>
 
   </div>
 
