--- a/html/about/index.html
+++ b/html/about/index.html
@@ -301,26 +301,30 @@
 
             <div class="progressStepContainer">
               <ul class="progressX">
-                <li class="progress__item" data-aos="fade-up">
-                  <h3> <strong class="Grey700">The Art of Drawing and Painting</strong> </h3>
+                <li class="progress__item progress__item--active" data-aos="fade-up">
+                  <h3> <strong class="">The Art of Drawing & Painting</strong> </h3>
                   <h3>Art is my way of turning emotions and ideas into visual expression. It deepens my understanding of design and opens up new perspectives. Through color, composition, and other elements, art helps me create unique designs.
                   </h3>
 
                 </li>
                 <div class="blankHXS"></div>
 
-                <li class="progress__item" data-aos="fade-up">
-                  <h3> <strong class="Grey700"><a href="/architecture" class="textUnderline Grey700" title="Academic Projects"> Architectural Design</a> & <a href="/photography" class="textUnderline Grey700" title="Nature & Wildlife"> Photography </a></strong></h3>
+                <li class="progress__item progress__item--active" data-aos="fade-up">
+                  <h3> <strong class=""><a href="/architecture" class="textUnderline" title="Academic Projects"> Architectural Design</a> & <a href="/photography" class="textUnderline" title="Nature & Wildlife"> Photography </a></strong></h3>
                   <h3>In design, my heart lies in a vibrant creative vision that marries creativity, innovation, and precision with out-of-the-box thinking.
                     In architecture, I focus on creating functional and visually appealing buildings that meet client' needs, balance different elements, and achieve a harmonious aesthetic.
                   </h3>
                 </li>
                 <div class="blankHXS"></div>
 
-
+                <li class="progress__item progress__item--active" data-aos="fade-up">
+                  <h3> <strong>Web Implementation & <a href="/design_system" class="textUnderline" title="Academic Projects">Design System Management</a> </strong> </h3>
+                  <h3>Since 2020, I have been designing, implementing, and maintaining my website. I've learned a lot during this process, including managing a design system with HTML/CSS/JS/EJS, analyzing website traffic with tools like Posthog and Google Analytics, and even gaining some SEO knowledge.
+                  </h3>
+                  <div class="blankHXS"></div>
 
                 <li class="progress__item progress__item--active" data-aos="fade-up">
-                  <h3> <strong>User Experience Design </strong> </h3>
+                  <h3> <strong>User Experience Design</strong> </h3>
                   <h3>I love UX because it empowers users in the design process. My goal is always to solve problems through feedback and data analysis. The short design and development cycle in UX turns all my design dreams into reality.
 
 
