--- a/html/design_system/index.html
+++ b/html/design_system/index.html
@@ -186,15 +186,11 @@
 
 
 
+
 <header>
   <nav class="header" id="header">
     <div class="backgroundColorNav">
-      <a href="/" class="marginS centerVer pointer Grid--center"> 
-        <div class="arrow-container moveBackArrow">
-          <div class="left-arrow "></div>
-       </div>
-       <h4 class="backText">BACK</h4>
-      </a>
+      <a href="/"><img class="logo pointer" src="/icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
       <div class="navbar">
         <ul class="nav-menu">
           
@@ -219,6 +215,7 @@
   </nav>
 
 </header>
+
 
 
 
@@ -7400,7 +7397,7 @@ strong {
 
 &lt;!-- Back + Text --&gt;
 &lt;%- include(`${templatePath}/shared/block_nav_header`, {
-    type:&#39;Back with Menu&#39;, 
+    type:&#39;back&#39;, 
     currentPage: &#39;&#39;,
     PageUrl:`${websitePath}` 
     }) %&gt;
