--- a/html/about/index.html
+++ b/html/about/index.html
@@ -234,9 +234,22 @@
     <div class="Grid Grid--gutters Grid--1of3 Grid--center">
 
       <div class="Grid-cell">
-        <div class="element">
-          <img class="" src="/about/me.png" alt="icon arrow">
 
+        <div class="video-container">
+          <img class="videoImg" title="" src="me_bg.png">
+          <video class="video" poster="/about/me.png" src="me.mov" type="video/mp4">
+            <!--poster="me.png"-->
+          </video>
+          <div class="controls">
+            <div class="playButtons playerButtonStyle">
+              <button id="playPause"></button>
+            </div>
+          </div>
+          <div class="videoBarContainer">
+            <div class="videoBar">
+              <div class="videoBarColor"></div>
+            </div>
+          </div> 
         </div>
       </div>
 
@@ -271,33 +284,7 @@
 
   <!-- video -->
 
-  <div class="wrapper">
 
-      <div class="video-container">
-        <video class="video" src="https://ia802500.us.archive.org/35/items/three-legged-legs/3000kbs_starbucks.mp4" type="video/mp4">
-          <!--poster="me.png"-->
-
-        </video>
-        <div class="controls">
-          <div class="playButtons">
-            <button id="playPause"></button>
-          </div>
-        </div>
-
-
-
-        <div class="barContainer">
-
-          <div class="bar">
-            <div class="barColor"></div>
-          </div>
-
-        </div> 
-
-
-      </div>
-
-  </div>
 
   <!-- video -->
   <!-- My Journey -->
