--- a/html/about/index.html
+++ b/html/about/index.html
@@ -233,27 +233,13 @@
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--1of3 Grid--center">
 
+      
       <div class="Grid-cell">
+        <div class="element">
+          <img class="" src="me.png" alt="Vicky">
 
-        <div class="video-container">
-          <img class="videoImg" title="" src="me_bg.png">
-
-          <video class="video" poster="/about/me.png" src="me.mov" type="video/mp4">
-            <!--poster="me.png"-->
-          </video>
-          <div class="controls">
-            <div class="playButtons playerButtonStyle">
-              <button id="playPause"></button>
-            </div>
-          </div>
-          <div class="videoBarContainer">
-            <div class="videoBar">
-              <div class="videoBarColor"></div>
-            </div>
-          </div> 
         </div>
       </div>
-
       <div class="Grid-cell">
         <div class="element">
           <h3>As a UX designer, I possess a diverse range of skills and have gained experience in startup environments. I am fully involved in every aspect of the design process and continuously aim to create seamless user experiences that align with business objectives. My approach emphasizes simplicity, using the fewest design elements necessary to address core issues effectively.
