--- a/html/index.html
+++ b/html/index.html
@@ -257,7 +257,7 @@
     </div>
   </div>
 
-  <div class="Grid Grid--gutters Grid--cols-8 u-textCenter Grid--center">
+  <div class="Grid Grid--gutters Grid--cols-8 ">
     <div class="Grid-cell">
       <div class="ClipboardBoxIconOnly">
         <button class="ClipboardIconOnly">
