--- a/html/about/index.html
+++ b/html/about/index.html
@@ -528,7 +528,6 @@
     <div class="blankHS"></div>
     <div class="wrapper">
       <div class="element">
-
         <div class="Grid Grid--gutters Grid--1of3">
           <div class="Grid-cell">
 
@@ -538,28 +537,24 @@
             <div class="Grid Grid--gutters">
               <div class="ClipboardBoxIconOnly">
                 <button class="ClipboardIconOnly">
-                  <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax"
+                  <img title="Copy Email Address to Clipboard" class="iconM hoverGrey300 paddingS borderRadiusMax"
                     title="Copy to Clipboard" src="/icon/mail.svg" alt="LinkedIn">
                   <p class="clickIconCopy">vickyw.design@gmail.com</p>
                 </button>
               </div>
               <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="/icon/in.svg" alt="LinkedIn">
+                <img class="iconM hoverGrey300 paddingS borderRadiusMax" src="/icon/in.svg" alt="LinkedIn">
               </a>
 
               <a target="_blank" href="https://github.com/vicky-wyq">
-                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="/icon/git.svg" alt="GitHub"
+                <img class="iconM hoverGrey300 paddingS borderRadiusMax" src="/icon/git.svg" alt="GitHub"
                   title="GitHub">
               </a>
 
               <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="/icon/Codepen.svg" alt="CodePen">
+                <img class="iconM hoverGrey300 paddingS borderRadiusMax" src="/icon/Codepen.svg" alt="CodePen">
               </a>
 
-              <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="/icon/ins.svg" alt="Instagram"
-                  title="Instagram">
-              </a>
             </div>
             <div class="blankHXS"></div>
           </div>
